@@ -9,6 +9,7 @@ import java.net.URL;
 import java.net.URLEncoder;
 import java.nio.file.DirectoryStream;
 import java.nio.file.Files;
+import java.nio.file.InvalidPathException;
 import java.nio.file.Paths;
 
 import javax.servlet.http.HttpServletRequest;
@@ -24,6 +25,7 @@ import de.unigoettingen.sub.commons.contentlib.exceptions.IllegalRequestExceptio
 import de.unigoettingen.sub.commons.contentlib.servlet.model.ContentServerConfiguration;
 import de.unigoettingen.sub.commons.contentlib.servlet.rest.ContentServerBinding;
 import de.unigoettingen.sub.commons.contentlib.servlet.rest.ImageResource;
+import de.unigoettingen.sub.commons.util.PathConverter;
 
 /**
  * A IIIF image resource for goobi image urls
@@ -50,25 +52,29 @@ public class GoobiImageResource extends ImageResource {
     private static String getDirectory(String process, String folder) throws ContentNotFoundException {
         java.nio.file.Path path = null;
         try {
-            path = Paths.get(new URL(ContentServerConfiguration.getInstance().getRepositoryPathImages()).getPath());
-            path = path.resolve(process);
+            
+            String repository = ContentServerConfiguration.getInstance().getRepositoryPathImages();
+
+                path = PathConverter.getPath(new URI(repository));
+
+                path = path.resolve(process);
             if (Files.isDirectory(path)) {
                 path = path.resolve("images");
                 if(folder.startsWith("thumbnails_")) {
                   path = path.resolve("layoutWizzard-temp").resolve(folder);  
-                  return path.toString();
+                  return PathConverter.toURI(path).toString();
                 } 
                 try (DirectoryStream<java.nio.file.Path> stream = Files.newDirectoryStream(path)) {
                     for (java.nio.file.Path subPath : stream) {
                         if(Files.isDirectory(subPath) && matchesFolder(subPath.getFileName().toString(), folder)) {
-                            return subPath.toString();
+                            return PathConverter.toURI(subPath).toString();
                         }
                     }
                 } catch (IOException e) {
                     logger.error(e.toString(), e);
                 }
             }
-        } catch (MalformedURLException e) {
+        } catch (URISyntaxException e) {
             logger.error(e.toString(), e);
         }
         throw new ContentNotFoundException("Found no content in " + path);
